--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,11 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
+        android:id="@+id/main_BottomAppBar"
         style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom" />
-    
+        android:layout_gravity="bottom"
+        android:contentDescription="@string/main_BottomAppBar_desc"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
