--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -15,55 +15,108 @@
         tools:context=".LoginRegisterActivity">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="350dp"
             android:layout_height="290dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- Login Title -->
                 <TextView
-                    android:text="@string/login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"/>
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="@string/login"
+                    android:textSize="25sp" />
+
 
                 <!--TextInput 1 -->
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:hint="@string/username"
-                    android:layout_marginRight="10dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_height="wrap_content">
+                    android:layout_marginRight="10dp"
+                    android:hint="@string/username"
+                    >
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:drawableEnd="@drawable/ic_baseline_check_circle_24"/>
+                        android:drawableEnd="@drawable/ic_baseline_check_circle_24" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <!--TextInput 2 -->
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:hint="@string/password"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
                     android:layout_height="wrap_content"
-                    app:endIconMode="password_toggle">
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:hint="@string/password">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:drawableEnd="@drawable/ic_outline_remove_red_eye_24"/>
+                        android:drawableEnd="@drawable/ic_outline_remove_red_eye_24"
+                        android:inputType="textPassword" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <!-- Forgot password title -->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="end"
+                    android:text="@string/ForgotPassword"
+                    android:textColor="@color/colorPrimaryDark" />
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Checkbox and Button -->
+        <LinearLayout
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="34dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="@string/rememberMe" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="20dp"
+                android:text="@string/action_sign_in"
+                app:backgroundTint="@color/colorPrimary">
+
+            </com.google.android.material.button.MaterialButton>
+
+
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -71,7 +124,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".LoginRegisterActivity">
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/main_BottomAppBar"
