--- a/app/src/main/res/layout/intro_slider_layout.xml
+++ b/app/src/main/res/layout/intro_slider_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foregroundTint="#00FFFFFF"
     tools:showIn="@layout/intro_slider_layout">
 
 
@@ -19,33 +20,37 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/intro_slider_dots_margin_bottom"
         android:gravity="center"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:alpha=".5"
         android:layout_above="@id/layoutDots"
+        android:alpha=".5"
         android:background="@android:color/white" />
 
     <Button
         android:id="@+id/btn_next"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:backgroundTint="#00FFFFFF"
+        android:onClick="onNext"
         android:text="@string/intro_slider_next"
-        android:textColor="@android:color/white"
-        android:onClick="onNext"/>
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/btn_skip"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:backgroundTint="#00FFFFFF"
+        android:onClick="onSkip"
         android:text="@string/intro_slider_skip"
-        android:textColor="@android:color/white"
-        android:onClick="onSkip"/>
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
