--- a/app/src/main/res/layout/intro_slide4.xml
+++ b/app/src/main/res/layout/intro_slide4.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="@dimen/intro_slider_img_size"
             android:layout_height="@dimen/intro_slider_img_size"
-            android:src="@drawable/img_ph" />
+            android:src="@drawable/img_slide4" />
 
         <TextView
             android:layout_width="wrap_content"
