--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -109,12 +109,13 @@
                 android:layout_weight="1" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_login"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="20dp"
+                android:onClick="loginUser"
                 android:text="@string/action_sign_in"
-                app:backgroundTint="@color/colorPrimary"
-                android:onClick="loginUser">
+                app:backgroundTint="@color/colorPrimary">
 
             </com.google.android.material.button.MaterialButton>
 
