--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#FF4D1C</color>
     <color name="colorAccent">#EDE8E8</color>
 
+    <color name="colorDarkGray">#404040</color>
 
     <!-- Intro Slider -->
     <color name="intro_slider_bg1">#F64C73</color>
