Opprettet side for Settings

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -17,10 +17,13 @@
 
     <item android:title="@string/system">
         <menu>
-            <item android:title="@string/settings"
+            <item
+                android:id="@+id/nav_settings"
+                android:title="@string/settings"
                 android:icon="@drawable/ic_settings_black_24dp" />
 
-            <item android:id="@+id/nav_LoginReg"
+            <item
+                android:id="@+id/nav_LoginReg"
                 android:title="@string/login_logout"
                 android:icon="@drawable/ic_loginlogout_24" />
         </menu>
