--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,17 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/coming_tasks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/main_BottomAppBar"
             style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_gravity="bottom|end"
             android:contentDescription="@string/main_BottomAppBar_desc"
             app:hideOnScroll="true"
             app:menu="@menu/main_bottomappbar_menu"
@@ -36,11 +41,6 @@
             app:srcCompat="@drawable/ic_add_black_24dp"
             app:borderWidth="0dp"
             android:backgroundTint="@color/colorAccent"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/coming_tasks"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
