--- a/app/src/main/res/xml/settings_pref.xml
+++ b/app/src/main/res/xml/settings_pref.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <Preference
-        android:key="@string/key_IsFirstTime"
-        android:title="@string/settings_redo_title"
-        android:summary="@string/settings_redo_desc"/>
+    <PreferenceCategory 
+        android:title="GENERAL">
+        <Preference
+            android:key="@string/key_IsFirstTime"
+            android:title="@string/settings_redo_title"
+            android:summary="@string/settings_redo_desc"/>
+
+    </PreferenceCategory>
 </PreferenceScreen>
