--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -14,113 +14,103 @@
         android:layout_height="match_parent"
         tools:context=".LoginRegisterActivity">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="350dp"
-            android:layout_height="290dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <!-- Login Title -->
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="@string/login"
-                    android:textSize="25sp" />
-
-
-                <!--TextInput 1 -->
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:hint="@string/prompt_email">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/inp_login_email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:drawableEnd="@drawable/ic_baseline_check_circle_24"
-                        android:inputType="textEmailAddress" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <!--TextInput 2 -->
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:hint="@string/prompt_password">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/inp_login_pw"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:drawableEnd="@drawable/ic_outline_remove_red_eye_24"
-                        android:inputType="textPassword" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <!-- Forgot password title -->
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp"
-                    android:gravity="end"
-                    android:text="@string/ForgotPassword"
-                    android:textColor="@color/colorPrimaryDark" />
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <!-- Checkbox and Button -->
         <LinearLayout
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="34dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView">
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <CheckBox
-                android:layout_width="wrap_content"
+            <!-- Login Title -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:text="@string/login"
+                android:textSize="25sp" />
+
+
+            <!--TextInput 1 -->
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inp_login_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_baseline_check_circle_24"
+                    android:inputType="textEmailAddress"
+                    android:hint="@string/prompt_email"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--TextInput 2 -->
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inp_login_pw"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_outline_remove_red_eye_24"
+                    android:inputType="textPassword"
+                    android:hint="@string/prompt_password"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!-- Forgot password title -->
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:text="@string/rememberMe" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_login"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
-                android:onClick="loginUser"
-                android:text="@string/action_sign_in"
-                app:backgroundTint="@color/colorPrimary">
+                android:gravity="end"
+                android:text="@string/ForgotPassword"
+                android:textColor="@color/colorPrimaryDark" />
 
-            </com.google.android.material.button.MaterialButton>
+            <LinearLayout
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:text="@string/rememberMe" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_login"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="20dp"
+                    android:onClick="loginUser"
+                    android:text="@string/action_sign_in"
+                    app:backgroundTint="@color/colorPrimary">
+
+                </com.google.android.material.button.MaterialButton>
+
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <!-- Checkbox and Button -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
