--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -2,8 +2,8 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".LoginRegisterActivity"
     android:id="@+id/drawer_layoutLoginRegister"
     >
@@ -18,99 +18,80 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="56dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            >
 
-            <!-- Login Title -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                android:text="@string/login"
-                android:textSize="25sp" />
+            <!-- Logo / Title -->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="72dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="24dp"
+                android:src="@drawable/placeholder_logo" />
 
 
-            <!--TextInput 1 -->
+            <!-- Email label -->
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/inp_login_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/ic_baseline_check_circle_24"
-                    android:inputType="textEmailAddress"
-                    android:hint="@string/prompt_email"/>
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!--TextInput 2 -->
+            <!-- Password label -->
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/inp_login_pw"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/ic_outline_remove_red_eye_24"
-                    android:inputType="textPassword"
-                    android:hint="@string/prompt_password"/>
+                    android:hint="@string/prompt_password"
+                    android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Forgot password title -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                android:gravity="end"
-                android:text="@string/ForgotPassword"
-                android:textColor="@color/colorPrimaryDark" />
-
-            <LinearLayout
-                android:layout_width="400dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="@string/rememberMe" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
+                <!-- Login Button -->
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_login"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:padding="12dp"
                     android:onClick="loginUser"
-                    android:text="@string/action_sign_in"
-                    app:backgroundTint="@color/colorPrimary">
+                    android:text="@string/login"
+                    app:backgroundTint="@color/colorPrimaryDark">
 
                 </com.google.android.material.button.MaterialButton>
 
-
-            </LinearLayout>
-
+            <TextView android:id="@+id/link_signup"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:text="@string/NoAccount"
+                android:textColor="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:textSize="16sp"/>
         </LinearLayout>
 
-        <!-- Checkbox and Button -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
