--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#FF8019</color>
     <color name="colorPrimaryDark">#FF4D1C</color>
     <color name="colorAccent">#EDE8E8</color>
+    <color name="colorAccentSecondary">#D9D4D1</color>
+    <color name="colorDarkLiver">#43444D</color>
 
     <color name="colorDarkGray">#404040</color>
 
