Fonts, SignUpActivity fungerer
Lagt til fonts, og gitt SignUpActivity funksjonalitet. Login og registrer skal fungerer

--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -21,29 +21,36 @@
 
             <!-- Logo / Title -->
             <TextView
+                android:id="@+id/logoTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="72dp"
                 android:layout_marginBottom="15dp"
                 android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/luckiest_guy"
                 android:text="@string/logo"
-                android:textSize="55sp" />
+                android:textSize="55sp"
+                android:transitionName="logo_title"
+                />
             <TextView
+                android:id="@+id/logoText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:text="@string/signInText"
                 android:textColor="@color/colorPrimaryDark"
+                android:transitionName="logo_text"
                 />
 
 
             <!-- Email label -->
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/lgn_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:transitionName="input_email"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -58,11 +65,14 @@
 
             <!-- Password label -->
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/lgn_pw"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                app:passwordToggleEnabled="true"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:transitionName="input_pw"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -84,7 +94,9 @@
                     android:padding="12dp"
                     android:onClick="loginUser"
                     android:text="@string/login"
-                    app:backgroundTint="@color/colorPrimaryDark">
+                    app:backgroundTint="@color/colorPrimaryDark"
+                    android:transitionName="button_action"
+                    >
 
                 </com.google.android.material.button.MaterialButton>
 
@@ -95,7 +107,9 @@
                 android:text="@string/NoAccount"
                 android:textColor="@color/colorPrimaryDark"
                 android:gravity="center"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:transitionName="btn_text"
+                />
         </LinearLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
