--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,7 +9,9 @@
                 android:title="@string/profile"
                 android:icon="@drawable/ic_profile_black_24dp" />
 
-            <item android:title="@string/achievements"
+            <item
+                android:id="@+id/nav_achievements"
+                android:title="@string/achievements"
                 android:icon="@drawable/ic_achievements_black_24dp" />
 
             <item android:title="@string/tasks"
