Henter achievements fra Firestore, sjekker om UID matcher innlogget bruker sin UID

--- a/app/src/main/res/layout/activity_achievements.xml
+++ b/app/src/main/res/layout/activity_achievements.xml
@@ -8,4 +8,10 @@
     tools:context=".AchievementsActivity"
     android:orientation="vertical">
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/achievements_recView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
