--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
 
     <color name="colorDarkGray">#404040</color>
 
+
+    <color name="colorLightGray">#808080</color>
+
     <!-- Intro Slider -->
     <color name="intro_slider_bg1">#F64C73</color>
     <color name="intro_slider_bg2">#20D2BB</color>
