--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,6 @@
     <color name="profile_gradientEnd">#404040</color>
     <color name="profile_achievements_bg">#D9D4D1</color>
     <color name="profile_tasks">#EDE8E8</color>
+
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
