--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,20 +7,18 @@
     tools:context=".ProfileActivity">
 
     <RelativeLayout
-        android:id="@+id/profileHeaderRel"
+        android:id="@+id/profile_rellay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient">
 
         <RelativeLayout
-            android:id="@+id/imageUser"
+            android:id="@+id/profile_userimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/circle_border"
             android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true">
-
-
 
             <ImageView
                 android:layout_width="80dp"
@@ -35,11 +33,12 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/profile_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageUser"
+            android:layout_below="@+id/profile_userimage"
             android:layout_centerHorizontal="true"
-            android:text="Brukernavn"
+            android:text="Username"
             android:textSize="20dp"
             android:textColor="@color/colorWhite"
             android:fontFamily="@font/roboto"
@@ -47,5 +46,82 @@
             android:layout_marginBottom="10dp"/>
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/profile_linlay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profile_rellay"
+        android:orientation="horizontal">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/profile_tasks_bg"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="123"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorDarkLiver"
+                    android:fontFamily="@font/roboto"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tasks"
+                    android:textSize="15sp"
+                    android:textColor="@color/colorDarkLiver"
+                    android:fontFamily="@font/roboto"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/profile_achievements_bg"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="321"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorDarkLiver"
+                    android:fontFamily="@font/roboto"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Achievements"
+                    android:textSize="15sp"
+                    android:textColor="@color/colorDarkLiver"
+                    android:fontFamily="@font/roboto"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
