--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -46,6 +46,7 @@
             android:layout_marginBottom="20dp"/>
 
         <ImageView
+            android:id="@+id/link_Editprofile"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_settings_white_24dp"
