Implementert Comparable, sorterer achievements

--- a/app/src/main/res/layout/activity_achievements.xml
+++ b/app/src/main/res/layout/activity_achievements.xml
@@ -8,7 +8,7 @@
     tools:context=".AchievementsActivity">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/achievements_tabLayout"
+        android:id="@+id/ach_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
